--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.menu.CartFragment">
+    tools:context=".ui.main.menu.CartFragment"
+    android:layout_marginHorizontal="24dp">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
