--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,8 @@
         android:layout_height="match_parent">
 
         <androidx.fragment.app.FragmentContainerView
+
+            android:layout_marginHorizontal="24dp"
             android:id="@+id/fr_menu"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
@@ -21,7 +23,6 @@
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:layout_marginHorizontal="24dp"
             android:layout_marginBottom="25dp"
             android:background="@drawable/bg_navbar"
             android:elevation="0dp"
@@ -32,6 +33,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_nav_menu"
-            app:itemIconTint="@color/selector_nav_item_color"/>
+            app:itemIconTint="@color/selector_nav_item_color"
+
+            android:layout_marginHorizontal="24dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
