--- a/app/src/main/res/layout/fragment_menu_coffee.xml
+++ b/app/src/main/res/layout/fragment_menu_coffee.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.main.menu.MenuCoffeeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="-8dp"
         android:id="@+id/rv_coffee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
