--- a/app/src/main/res/layout/item_menu_product.xml
+++ b/app/src/main/res/layout/item_menu_product.xml
@@ -6,34 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_product_list"
-    android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_categories_snacks_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_snacks" />
-
+        app:srcCompat="@drawable/ic_product"/>
     <TextView
-        android:id="@+id/tv_categories_snacks_name"
+        android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/profile_name"
         android:textColor="@color/primary_text"
-        android:textSize="14sp" />
-
+        android:textSize="14sp"
+        android:layout_marginTop="20dp"/>
     <TextView
-        android:id="@+id/tv_categories_snacks_price"
+        android:id="@+id/tv_product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
         android:text="@string/price_text"
         android:textColor="@color/primary_text"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="14sp" />
 
 </LinearLayout>
