--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.menu.CartFragment"
+    tools:context=".ui.main.cart.CartFragment"
     android:layout_marginHorizontal="24dp">
     <LinearLayout
         android:orientation="vertical"
@@ -36,58 +36,12 @@
             app:layout_constraintStart_toStartOf="@+id/bt_back_light"
             app:layout_constraintTop_toBottomOf="@+id/bt_back_light" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_container"
-            android:layout_marginTop="26dp"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fr_cart_container"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_margin="32dp"
-            android:gravity="bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:ignore="MissingConstraints">
-
-
-            <Button
-                android:id="@+id/btn_checkout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/checkout"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/btn_primary"/>
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_checkout"
-                android:layout_alignParentStart="true"
-                android:layout_marginVertical="1dp"
-                android:layout_marginStart="0dp"
-                android:text="@string/total_price"
-                android:textColor="@color/primary_text"
-                android:fontFamily="@font/poppins_medium"
-                android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_checkout"
-                android:layout_alignEnd="@+id/btn_checkout"
-                android:layout_marginVertical="1dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginBottom="1dp"
-                android:text="@string/price_text"
-                android:textColor="@color/primary_text"
-                android:fontFamily="@font/poppins_semibold"
-                android:textSize="16sp" />
-
-        </RelativeLayout>
-
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"/>
     </LinearLayout>
 
 </FrameLayout>
