--- a/app/src/main/res/layout/fragment_oops.xml
+++ b/app/src/main/res/layout/fragment_oops.xml
@@ -4,35 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.main.cart.NoOrdersFragment">
+    tools:context=".ui.main.cart.OopsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="100dp">
-
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_order" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/no_order"
+                android:text="@string/oops"
                 android:textColor="@color/primary_text"
                 android:textSize="22sp" />
             <TextView
@@ -42,10 +34,21 @@
                 android:gravity="center"
                 android:layout_marginHorizontal="46dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/no_order_description"
+                android:text="@string/region_eror"
                 android:textColor="@color/secondary_text"
                 android:lineSpacingMultiplier="1.5"
                 android:textSize="14sp" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginTop="81dp"
+                android:id="@+id/btn_clear"
+                android:layout_width="315dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_primary"
+                android:backgroundTint="@color/items_background"
+                android:text="@string/clear"
+                android:textColor="@color/red"
+                android:textSize="14sp"
+                android:elevation="0dp"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
