--- a/app/src/main/res/navigation/navgraph_main_activity.xml
+++ b/app/src/main/res/navigation/navgraph_main_activity.xml
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
-        android:name="com.example.coffeehouse.ui.main.menu.CartFragment"
+        android:name="com.example.coffeehouse.ui.main.cart.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" >
         <action
