--- a/app/src/main/res/layout/fragment_dessert.xml
+++ b/app/src/main/res/layout/fragment_dessert.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.menu.DessertFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="-8dp"
+        android:id="@+id/rv_dessert"
+        android:nestedScrollingEnabled="false"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"/>
 
 </FrameLayout>
