--- a/app/src/main/res/layout/fragment_cart_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_cart_recycle_view.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.cart.CartRecycleViewFragment">
-    <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -25,11 +28,13 @@
 
             <Button
                 android:id="@+id/btn_checkout"
-                android:layout_width="match_parent"
+                android:layout_width="163dp"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn_primary"
                 android:text="@string/checkout"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/btn_primary"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -38,11 +43,12 @@
                 android:layout_above="@+id/btn_checkout"
                 android:layout_alignParentStart="true"
                 android:layout_marginVertical="1dp"
-                android:layout_marginStart="0dp"
-                android:text="@string/total_price"
-                android:textColor="@color/primary_text"
                 android:fontFamily="@font/poppins_medium"
-                android:textSize="16sp"/>
+                android:text="@string/total_price"
+                android:textColor="@color/secondary_text"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -51,12 +57,13 @@
                 android:layout_above="@+id/btn_checkout"
                 android:layout_alignEnd="@+id/btn_checkout"
                 android:layout_marginVertical="1dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="@string/price_text"
                 android:textColor="@color/primary_text"
-                android:fontFamily="@font/poppins_semibold"
-                android:textSize="16sp" />
-        </RelativeLayout>
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
+    </ScrollView>
 </FrameLayout>
